1.从父类中找