@@ -6,8 +6,10 @@ import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Parameter;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static java.util.Arrays.stream;
 
@@ -20,7 +22,6 @@ class ConstructorInjectionProvider<T> implements ComponentProvider<T> {
     public ConstructorInjectionProvider(Class<T> component) {
         this.injectConstructor = getInjectConstructor(component);
         this.injectFields = getInjectFields(component);
-
     }
 
 
@@ -42,13 +43,20 @@ class ConstructorInjectionProvider<T> implements ComponentProvider<T> {
 
     @Override
     public List<Class<?>> getDependency() {
-        //注意这里，返回的是list
-        return stream(injectConstructor.getParameters()).map(Parameter::getType).collect(Collectors.toList());
+        return Stream.concat(stream(injectConstructor.getParameters()).map(Parameter::getType),
+                injectFields.stream().map(Field::getType)).toList();
     }
 
     private static <T> List<Field> getInjectFields(Class<T> component) {
-        return stream(component.getDeclaredFields())
-                .filter(f -> f.isAnnotationPresent(Inject.class)).toList();
+        List<Field> injectFields = new ArrayList<>();
+        Class<?> current = component;
+        while (current != Object.class){
+            //注意，这里是current
+            injectFields.addAll(stream(current.getDeclaredFields())
+                    .filter(f -> f.isAnnotationPresent(Inject.class)).toList());
+            current = current.getSuperclass();
+        }
+        return injectFields;
     }
 
     private static <Type> Constructor<Type> getInjectConstructor(Class<Type> implementation) {
